--- a/index.html
+++ b/index.html
@@ -6,67 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Something interesting</title>
+    <link type="text/css" rel="styleSheet" href="./css/index.css">
 </head>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    #app {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .btn {
-        width: 80px;
-        height: 35px;
-        margin: 10px;
-        outline: none;
-
-    }
-</style>
 
 
 <body>
     <div id="app">
         <canvas id="canvas" width="600" height="600" style="background: #000;"></canvas>
         <div style="margin:10px" id="btnContainer">
-
         </div>
         <div style="margin:10px">
             <button id="reset" class="btn">重置</button>
         </div>
     </div>
 </body>
-<script type="module">
-    import $draw from "./js/draw.js"
-    import $sort from "./js/sort.js"
-    import data from "./js/data.js"
-    ///初始化canvas
-    const canvas = document.getElementById('canvas')
-    const ctx = canvas.getContext('2d')
-    ctx.fillStyle = 'white' // 设置画画的颜色
-    ctx.translate(300, 300) // 移动中心点到(500, 500)
-    //初始化数据
-    $draw.drawAll(data);
-    let container = document.getElementById('btnContainer')
-    $sort.forEach(fn => {
-        let btn = document.createElement("button");
-        btn.classList.toggle('btn');
-        btn.innerText = fn.name;
-        btn.addEventListener('click', () => {
-            fn.handler(data)
-        });
-        container.appendChild(btn);
-    })
-    document.getElementById('reset').addEventListener('click', () => {
-        $draw.reset(data)
-    })
-</script>
-
+<script  src="./index.js" type="module"></script>
 </html>
